fix compile error

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,8 +77,9 @@ add_library(webp_imageio STATIC
 target_include_directories(webp_imageio PRIVATE ${webp_SOURCE_DIR}/src ${gif_SOURCE_DIR} ${IMAGE_CODEC_INCLUDE_DIRS})
 
 
-add_library(dropframes STATIC
+add_library(libanimtool STATIC
         core/dropframes.cpp
+        core/animate.cpp
         core/animenc.cpp
         core/webprun.cpp
         core/filefmt.cpp
@@ -86,9 +87,9 @@ add_library(dropframes STATIC
         core/gifrun.cpp
         core/imgrun.cpp
         core/quantizer.cpp)
-target_include_directories(dropframes PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${webp_SOURCE_DIR}/src ${gif_SOURCE_DIR})
+target_include_directories(libanimtool PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${webp_SOURCE_DIR}/src ${gif_SOURCE_DIR})
 
-add_executable(animtool app/animtool.cpp app/dropframes_cmd.cpp app/info_cmd.cpp)
+add_executable(animtool app/animtool.cpp app/dropframes_cmd.cpp app/info_cmd.cpp app/animate_cmd.cpp)
 target_include_directories(animtool PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${webp_SOURCE_DIR}/src ${gif_SOURCE_DIR})
 
-target_link_libraries(animtool dropframes webp_imageio webp libwebpmux webpdemux giflib ${IMAGE_CODEC_LIBRARIES})
+target_link_libraries(animtool libanimtool webp_imageio webp libwebpmux webpdemux giflib ${IMAGE_CODEC_LIBRARIES})
