--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(animtool C CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 
+
 include(cmake/CPM.cmake)
 CPMAddPackage(NAME webp
         VERSION 1.3.0
@@ -19,6 +20,8 @@ CPMAddPackage(NAME webp
         "WEBP_BUILD_WEBPINFO OFF"
         "WEBP_BUILD_WEBPMUX OFF"
         "WEBP_BUILD_EXTRAS OFF"
+        "BUILD_SHARED_LIBS OFF"
+        "WEBP_LINK_STATIC ON"
         )
 
 CPMAddPackage(NAME gif
@@ -26,15 +29,6 @@ CPMAddPackage(NAME gif
         URL https://onboardcloud.dl.sourceforge.net/project/giflib/giflib-5.2.1.tar.gz
         URL_HASH SHA1=c3f774dcbdf26afded7788979c8081d33c6426dc
         )
-
-CPMAddPackage(NAME jpeg
-        VERSION 1.2.1
-        URL https://github.com/csparker247/jpeg-cmake/archive/refs/tags/v1.2.1.tar.gz
-        URL_HASH SHA1=b7a593d62702c0bba32cb1878ddf04dc10b672f6
-        OPTIONS
-        "BUILD_EXECUTABLES OFF"
-        )
-
 
 add_library(giflib STATIC
         ${gif_SOURCE_DIR}/dgif_lib.c
@@ -46,6 +40,62 @@ add_library(giflib STATIC
         ${gif_SOURCE_DIR}/quantize.c
         )
 
+#CPMAddPackage(
+#        NAME jpeg
+#        VERSION 0.0.1
+#        URL "https://github.com/dinghaoz/libjpeg-cmake/archive/refs/tags/0.0.1.tar.gz"
+#        OPTIONS
+#        "BUILD_SHARED_LIBS OFF"
+#        "BUILD_EXECUTABLES OFF"
+#        "BUILD_ALT_UI OFF"
+#        "BUILD_TESTS OFF"
+#        "BUILD_STATIC_LIBS ON"
+#        )
+
+CPMAddPackage(
+        NAME jpeg
+        VERSION 0.0.2
+        URL "https://github.com/dinghaoz/libjpeg-cmake/archive/refs/tags/0.0.2.tar.gz"
+        OPTIONS
+        "BUILD_SHARED_LIBS OFF"
+        "BUILD_EXECUTABLES OFF"
+        "BUILD_ALT_UI OFF"
+        "BUILD_TESTS OFF"
+        "BUILD_STATIC_LIBS ON"
+)
+
+## Use configure_file insted of file(COPY)
+## to ensure files are updated in src directory
+#configure_file(
+#        resources/CMakeLists.txt
+#        ${jpeg_SOURCE_DIR}/CMakeLists.txt
+#        COPYONLY
+#)
+#configure_file(
+#        resources/ConfigureJConfig.cmake
+#        ${jpeg_SOURCE_DIR}/ConfigureJConfig.cmake
+#        COPYONLY
+#)
+#configure_file(
+#        resources/jconfig.h.in
+#        ${jpeg_SOURCE_DIR}/jconfig.h.in
+#        COPYONLY
+#)
+#configure_file(
+#        resources/libjpeg.pc.cmakein
+#        ${jpeg_SOURCE_DIR}/libjpeg.pc.cmakein
+#        COPYONLY
+#)
+#configure_file(
+#        resources/libjpeg.la.in
+#        ${jpeg_SOURCE_DIR}/libjpeg.la.in
+#        COPYONLY
+#)
+#
+## Build libjpeg
+#add_subdirectory(${jpeg_SOURCE_DIR})
+
+
 
 add_definitions(-DWEBP_HAVE_GIF)
 add_definitions(-DWEBP_HAVE_JPEG)
@@ -53,13 +103,13 @@ add_definitions(-DWEBP_HAVE_JPEG)
 set(IMAGE_CODEC_LIBRARIES)
 set(IMAGE_CODEC_INCLUDE_DIRS)
 
-find_package(PNG)
-
-if(PNG_FOUND)
-    add_definitions(-DWEBP_HAVE_PNG)
-    list(APPEND IMAGE_CODEC_INCLUDE_DIRS ${PNG_INCLUDE_DIR})
-    list(APPEND IMAGE_CODEC_LIBRARIES ${PNG_LIBRARIES})
-endif()
+#find_package(PNG)
+#
+#if(PNG_FOUND)
+#    add_definitions(-DWEBP_HAVE_PNG)
+#    list(APPEND IMAGE_CODEC_INCLUDE_DIRS ${PNG_INCLUDE_DIR})
+#    list(APPEND IMAGE_CODEC_LIBRARIES ${PNG_LIBRARIES})
+#endif()
 
 
 #find_package(JPEG)
@@ -83,7 +133,7 @@ add_library(webp_imageio STATIC
         ${webp_SOURCE_DIR}/imageio/metadata.c
         ${webp_SOURCE_DIR}/imageio/pnmdec.c
         )
-target_include_directories(webp_imageio PRIVATE ${webp_SOURCE_DIR}/src ${jpeg_SOURCE_DIR}/libjpeg ${gif_SOURCE_DIR} ${IMAGE_CODEC_INCLUDE_DIRS})
+target_include_directories(webp_imageio PRIVATE ${webp_SOURCE_DIR}/src ${jpeg_SOURCE_DIR} ${gif_SOURCE_DIR} ${IMAGE_CODEC_INCLUDE_DIRS})
 
 
 add_library(animtoolcore STATIC
@@ -99,7 +149,7 @@ add_library(animtoolcore STATIC
 target_include_directories(animtoolcore PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${webp_SOURCE_DIR}/src ${gif_SOURCE_DIR})
 target_link_libraries(animtoolcore webp_imageio webp libwebpmux webpdemux giflib jpeg ${IMAGE_CODEC_LIBRARIES})
 
-add_executable(animtool app/animtool.cpp app/dropframes_cmd.cpp app/info_cmd.cpp app/animate_cmd.cpp)
-target_include_directories(animtool PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${webp_SOURCE_DIR}/src ${gif_SOURCE_DIR})
-
-target_link_libraries(animtool animtoolcore)
+#add_executable(animtool app/animtool.cpp app/dropframes_cmd.cpp app/info_cmd.cpp app/animate_cmd.cpp)
+#target_include_directories(animtool PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${webp_SOURCE_DIR}/src ${gif_SOURCE_DIR})
+#
+#target_link_libraries(animtool animtoolcore)
