--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -144,7 +144,7 @@ target_include_directories(animtoolcore PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${we
 target_link_libraries(animtoolcore webp_imageio webp libwebpmux webpdemux)
 
 if(BUILD_ANIMTOOL_EXECUTABLE)
-  add_executable(animtool app/animtool.cpp app/dropframes_cmd.cpp app/info_cmd.cpp app/animate_cmd.cpp app/opacity_cmd.cpp app/opacity_cmd.h app/overlay_cmd.cpp app/overlay_cmd.h)
+  add_executable(animtool app/animtool.cpp app/dropframes_cmd.cpp app/info_cmd.cpp app/animate_cmd.cpp app/opacity_cmd.cpp app/opacity_cmd.h app/overlay_cmd.cpp app/overlay_cmd.h app/mask_cmd.cpp app/mask_cmd.h)
   target_include_directories(animtool PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${webp_SOURCE_DIR}/src ${gif_SOURCE_DIR})
 
   target_link_libraries(animtool animtoolcore)
